# ipmaze

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md
.github/workflows/: ci.yaml  release.yaml  smoke.yaml
charts/ipmaze-controller/: Chart.yaml  README.md  values.yaml
charts/ipmaze-controller/crds/: cidrpolicies.ipmaze.k8s.justin.directory.yaml
charts/ipmaze-controller/templates/: _helpers.tpl  deployment.yaml  namespace.yaml  rbac.yaml  serviceaccount.yaml
config/: kustomization.yaml
config/controller/: README.md  deployment.yaml  kustomization.yaml  namespace.yaml  rbac.yaml
config/crd/: cidrpolicies.ipmaze.k8s.justin.directory.yaml  kustomization.yaml
config/examples/: README.md  google-cloud-us-central1-ipv4-pointer.yaml  google-cloud-us-central1-ipv4-quarter-hour.yaml  google-cloud-us-central1-ipv4.yaml  microsoft-service-tags-storage-westus.yaml
crates/ipmaze-controller/: Cargo.toml
crates/ipmaze-controller/src/: api.rs  controller.rs  extract.rs  lib.rs  main.rs  netpol.rs  source.rs  status.rs  validation.rs
crates/ipmaze-controller/tests/: controller_runtime.rs  schema_contract.rs
crates/ipmaze-controller/tests/fixtures/: google-cloud.sample.json  microsoft-service-tags.sample.json
impl/ipmaze-controller-rs/: impl.md
spec/ipmaze-controller/: policy.schema.json  spec.md
