[package]
name = "ipmaze-controller"
version = "0.1.0"
edition = "2021"

[lib]
name = "ipmaze_controller"
path = "src/lib.rs"

[[bin]]
name = "ipmaze-controller"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
ipnet = "2.11"
jmespath = "0.3"
k8s-openapi = { version = "0.24", features = ["v1_32"] }
kube = { version = "0.98", features = ["derive", "runtime", "client", "rustls-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"

[dev-dependencies]
bytes = "1"
http = "1"
pretty_assertions = "1"
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"